syntax = "proto3";

package chatservice;
option java_package = "app.groopy.protobuf";
option java_outer_classname = "ChatServiceProto";

service ChatService {
  rpc createChannel (CreateChatRoomRequest) returns (CreateChatRoomResponse) {};
}

message CreateChatRoomRequest {
  string channel_name = 1;
  string group_name = 2;
  string uuid = 3;
}

message CreateChatRoomResponse {
  string channel_name = 1;
  string group_name = 2;
  string uuid = 3;
}

message ErrorResponse {
  map<string, string> parameters = 1;
}